* Version 0.12.5 (unreleased)
- occtl: fixed json output of show status command. Introduced tests
  for checking its json output using yajl (#220).


* Version 0.12.4 (released 2019-07-03)
- Added support for radius access-challenge (multifactor) authentication.
- Fixed race condition when connect-script and disconnect-script are
  set, which could potentially cause a crash (#208).
- Perform quicker cleanup of sessions which their user explicitly
  disconnected (#210).


* Version 0.12.3 (released 2019-03-12)
- Fixed crash when no DTLS ciphersuite is negotiated.
- Fixed crash happening arbitrarily depending on handled string
  sizes (#197).
- Fixed compatibility issue with GnuTLS 3.3.x (#201).
- occtl: print the TLS session information, even if the DTLS channel
  is not established.


* Version 0.12.2 (released 2019-01-10)
- Added support for AES256-SHA legacy cipher. This allows the anyconnect
  clients to use AES256.
- Added support for the DTLS1.2 protocol hack used by new Anyconnect clients.


* Version 0.12.1 (released 2018-05-12)
- Fixed crash on initialization when server was running on background (#154)
- Work around issues with GnuTLS 3.4.x on ubuntu 16.04, at the cost
  of a memory leak on key reload (#152)


* Version 0.12.0 (released 2018-04-22)
- Allow DTLS stream to come from different IP from TLS stream.
  There are situations where internet providers send the UDP 
  stream from different IP (#61).
- Increased possibilities of allowed combinations of authentication
  methods (#108).
- Corrected regression since 0.11.8 with OTP authentication (#137).
- Added support for hostname-based virtual hosts, utilizing TLS
  SNI. With that change it is possible to configure multiple servers
  running over the same port (#133).
- Rename the tun device on BSD systems which support SIOCSIFNAME
  ioctl.
- Correctly handle proxy-protocol's health commands. That eliminates
  few connection drops when proxy protocol is in use.